# phantom-adversarial

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
docs/bible/: AI-ADVERSARIAL-BIBLE-v2.md
docs/methodology/: METHODOLOGY-v2.md
docs/personas/: AI-ADVERSARIAL-EXPERT.md
docs/research/: 01-adversarial-landscape-2026.md  02-narrative-engine-sota-2026.md  03-key-figures-2026-updates.md
prompts/seeds/: arcanum-seeds.json
src/: __init__.py
src/cli/: main.py
src/evaluator/: __init__.py  embedding_eval.py  judge.py  metrics.py
src/narrative_engine/: __init__.py  generator.py  mutators.py  strategies.py
tests/unit/: test_archive.py  test_evaluator.py  test_generator.py  test_mutators.py
