[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "phantom-adversarial"
version = "3.0.0"
description = "Production-grade adversarial prompt generation, testing, and hardening for AI systems"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Phantom Adversarial Team", email = "security@vibe.coding.inc" },
]
keywords = [
    "ai-security",
    "red-team",
    "adversarial-prompts",
    "llm-security",
    "jailbreak",
    "prompt-injection",
    "arcanum",
    "ai-red-team",
    "adversarial-ai",
    "safety-testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core data validation and settings
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",

    # CLI framework
    "typer[all]>=0.12.0,<1.0.0",

    # HTTP client (async-first, used for model API calls)
    "httpx>=0.27.0,<1.0.0",
    "httpx-sse>=0.4.0",

    # Numerical computing (used in QD archive and evaluation metrics)
    "numpy>=1.26.0,<3.0.0",

    # Vector similarity search (QD archive MAP-Elites grid)
    "faiss-cpu>=1.8.0",

    # Embedding models for fast evaluation (JBFuzz e5-base-v2 evaluator)
    "sentence-transformers>=3.0.0,<4.0.0",

    # Rich terminal output and dashboards
    "rich>=13.7.0,<14.0.0",

    # Structured logging
    "structlog>=24.1.0",

    # YAML configuration parsing
    "pyyaml>=6.0.1",

    # Async task management
    "anyio>=4.3.0",
    "tenacity>=8.3.0",  # Retry logic with exponential backoff

    # JSON schema and output serialization
    "orjson>=3.10.0",

    # Rate limiting utilities
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",     # Parallel test execution
    "pytest-timeout>=2.3.0",

    # Code quality
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",

    # Development utilities
    "ipython>=8.24.0",
    "httpx[http2]>=0.27.0",
    "respx>=0.21.0",           # Mock httpx requests in tests
]

report = [
    # PDF and HTML report generation
    "jinja2>=3.1.4",
    "weasyprint>=62.0",        # HTML-to-PDF
    "plotly>=5.22.0",          # ASR visualization charts
    "pandas>=2.2.0",           # Data manipulation for reports
]

openai = [
    "openai>=1.30.0,<2.0.0",
]

anthropic = [
    "anthropic>=0.28.0,<1.0.0",
]

google = [
    "google-generativeai>=0.7.0",
]

rl = [
    # Reinforcement learning mutation selector (TurboFuzzLLM Q-learning)
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
]

full = [
    "phantom-adversarial[dev,report,openai,anthropic,google,rl]",
]

[project.scripts]
phantom = "src.cli.main:app"

[project.urls]
Homepage = "https://github.com/VibeCodingLabs/phantom-adversarial"
Documentation = "https://github.com/VibeCodingLabs/phantom-adversarial/tree/main/docs"
Repository = "https://github.com/VibeCodingLabs/phantom-adversarial"
"Bug Tracker" = "https://github.com/VibeCodingLabs/phantom-adversarial/issues"
Changelog = "https://github.com/VibeCodingLabs/phantom-adversarial/blob/main/CHANGELOG.md"
Security = "https://github.com/VibeCodingLabs/phantom-adversarial/blob/main/SECURITY.md"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/prompts",
    "/docs",
    "/tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
]
exclude = [
    "/.env",
    "/results",
    "**/__pycache__",
    "**/*.pyc",
]

# ─── Ruff (linting + formatting) ────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "S",     # flake8-bandit (security)
    "ANN",   # flake8-annotations
    "D",     # pydocstring
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "ANN101", # Missing type annotation for `self`
    "S101",  # Use of assert (needed in tests)
    "S105",  # Possible hardcoded password (false positives in test fixtures)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "D"]
"src/cli/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ─── Mypy (type checking) ────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "faiss",
    "sentence_transformers",
    "plotly.*",
    "weasyprint",
    "stable_baselines3.*",
    "gymnasium.*",
]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests requiring API keys (mark with --integration flag)",
    "slow: Tests that take more than 30 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx",
    "ignore::PendingDeprecationWarning",
]

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
